-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2
-
None
-
-
9599406cdbf7eb6e84fb6b62704fe3d8a870441c (qt/qtmultimedia/dev) 022e91909027b3a6b9495467b2fdea674c815a3e (qt/qtmultimedia/6.2)
Steps to reproduce:
1. Run player example on Android device
- resulted from
-
QTBUG-93460 Test Android Examples
-
- Closed
-
For Gerrit Dashboard: QTBUG-96747 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
373468,5 | Fix black rectangle on mediaplayer widget example | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
376495,2 | Fix black rectangle on mediaplayer widget example | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |